# cnsc-haai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION_REVIEW.md  Dockerfile  HAAI.md  INTEGRATED_UPGRADE_PLAN.md  LICENSE  Makefile  README.md  VERSION.md  dev.nix  docker-compose.yml  docker-entrypoint.sh  gml_memory_backup.json  haai_logs.json  pyproject.toml  pytest.ini  requirements.txt  run_benchmarks.py  setup.cfg  test_ghll_syntax.py
.idx/: dev.nix
.roo/: mcp.json
CGL_Doc_Spine/: LICENSE.md  README.md  mkdocs.yml
Coherence_Spec_v1_0/: README.md
NSC_Caelus_AI_Package_v1/: README.md
Noetica_Ecosystem_Bundle_v1/: GOVERNANCE.md  Glossary_and_Lexicon.md  INDEX.md  MANIFEST.json
compliance_tests/: conftest.py
docs/: 00_System_Overview.md  01_Coherence_PoC_Canon.md  20_Mathematical_Alignment.md  ARCHITECTURE.md  DOCUMENTATION_REVIEW.md  GLOSSARY_AND_LEXICON.md  Phase5_Governance_Implementation.md  README.md  RUNTIME_KERNEL_BOUNDARY_CONTRACT.md  SPINE.md  SPINE_CLASSIFICATION.md  TESTING_FRAMEWORK.md  cli-reference.md  npe_security.md
plans/: ATS_Kernel_Fix_Plan.md  AUDIT_IMPLEMENTATION_PLAN.md  Bug_Fix_Plan.md  CLATL_Implementation_Plan.md  CNHAAI_Phase_Out_Plan.md  CONSENSUS_BUG_FIX_PLAN.md  Completeness_Gap_Resolution_Plan.md  GMI_v1_6_Runtime_Integration_Plan.md  GMI_v1_Operational_Plan.md  GML_Graph_Native_Migration_Plan.md  GML_Graph_Native_Migration_Results.md  HAAI_Implementation_Plan.md  HASHING_PRIMITIVES_REFACTOR_PLAN.md  Logging_Alerting_Plan.md  NPE_REQUEST_ID_FIX_AND_CONSENSUS_IMPROVEMENT_PLAN.md  Phase2A_CLATL_Learning_Implementation_Plan.md  Phase2_CLATL_Learning_Plan.md  Phase3_Completion_Implementation_Plan.md  Phase3_Planning_Skills_Implementation_Plan.md  Phase3_Skills_Integration_Proof_Implementation_Plan.md  README.md  SOC_Theorem_Formalization_Plan.md  TGS_Build_Integration_Plan.md  TODO.md  cnsc_haai_fix_plan.md
schemas/: coh.policy.retention.v1.schema.json  coh.receipt.finalize.v1.schema.json  coh.receipt.fraudproof.v1.schema.json  coh.receipt.slab.v1.schema.json  coh.receipt.topology_jump.v1.schema.json  coh.renorm_criticality_receipt.v1.json  hadamard_glyph.schema.json  npe_request.schema.json  receipt.ats.v2.schema.json  receipt.ats.v3.schema.json  receipt.schema.json
src/: PACKAGE_STRUCTURE.md  README.md
src/npe/: README.md  __init__.py  pyproject.toml  schema.py  spec_constants.py
src/npe/api/: __init__.py  routes.py  server.py  wire.py
src/npe/cli/: __init__.py  npe.py
src/npe/core/: __init__.py  binary_parser.py  budgets.py  canon.py  delta_program.py  errors.py  hashing.py  prng_chacha20.py  qfixed18.py  time.py  types.py
src/npe/proposers/: __init__.py
src/npe/proposers/gr/: __init__.py  explain_receipt_summarizer.py  repair_from_gate_reasons.py  rule_atomic_safety.py  template_plan_library.py
src/npe/registry/: __init__.py  dispatch.py  loader.py  manifest.yaml
src/npe/retrieval/: __init__.py  codebook_store.py  corpus_store.py  filters.py  index_build.py  query.py  receipts_store.py
src/npe/rv/: verify_proposal.py
src/npe/schemas/: __init__.py  lexicon.schema.json  npe_response.schema.json  packet.schema.json  rewrite_packet.schema.json  traceloom.schema.json
src/npe/scoring/: __init__.py  prune.py  rank.py  score.py
src/npe/tests/: __init__.py  test_bench_harness.py  test_canon_hashing.py  test_delta_program_fuzz.py  test_determinism_d0.py  test_filters_taint.py  test_gr_repairs.py  test_no_floats_rule.py  test_phase0_sanity.py  test_qfixed18_arithmetic.py
tests/: __init__.py  conftest.py  demo_governance_system.py  demo_haai_system.py  test_abstraction.py  test_coherence.py  test_coherence_validation.py  test_consensus_compliance.py  test_database.py  test_distributed.py  test_framework.py  test_gates.py  test_governance_integration.py  test_graphgml.py  test_graphgml_builder.py  test_graphgml_conversion.py  test_graphgml_core.py  test_graphgml_integration.py  test_graphgml_types.py  test_haai_integration.py  test_haai_llm_comparison.py  test_hash_hygiene.py  test_hash_receipts_and_taint.py  test_hierarchical_reasoning_benchmarks.py  test_integration_suite.py  test_kernel_integration.py  test_npe_integration.py  test_npe_performance.py  test_performance_benchmarking.py  test_phases.py  test_policy_conversion.py  test_receipts.py  test_runner.py  test_safety_governance.py  test_schema_registry.py  test_soc.py  test_unit_components.py
(+595 files in other folders)
