[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnsc-haai"
version = "1.0.0"
description = "CNSC-HAAI - Coherent Non-Hierarchical Artificial Intelligence Framework"
readme = "README.md"
license = {text = "CNSC-HAAI Protective Research License (PRL-1.2)"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
    "aiohttp>=3.9.0",
]
authors = [
    {name = "CNHAAI Team"}
]
keywords = [
    "ai",
    "reasoning",
    "coherence",
    "abstraction",
    "auditability"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/coherenceframework/cnhaai"
Repository = "https://github.com/coherenceframework/cnhaai"
Issues = "https://github.com/coherenceframework/cnhaai/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
    "black>=23.0",
    "mypy>=1.0",
    "flake8>=6.0",
    "types-requests>=2.0",
]

[project.scripts]
cnsc-haai = "cnsc.haai.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cnsc*", "cnhaai*", "npe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_context = true
show_errors_context = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, E501, W503"
per-file-ignores = "__init__.py:F401"
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    ".venv",
    "venv",
]
