[metadata]
name = haai
version = 0.1.0
description = Hierarchical Abstraction AI - Coherence-governed AI system
author = Coherence Framework Team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.11
install_requires =
    numpy>=1.21.0
    typing-extensions>=4.0.0
    cryptography>=3.4.8
    pyjwt>=2.4.0
    matplotlib>=3.0.0
    psutil>=5.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    bandit>=1.7.0
    pre-commit>=3.0.0

[tool:pytest]
# Already configured in pytest.ini, but duplicated here for compatibility
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
asyncio_mode = auto
timeout = 120
addopts = --tb=short --strict-markers --disable-warnings -v --cov=src/haai --cov-report=term-missing --cov-fail-under=80

[tool:isort]
profile = black
line_length = 100
skip = .venv

[tool:black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool:mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true
