[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npe"
version = "1.0.0"
description = "Noetican Proposal Engine - External proposer service for CNSC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
npe = "npe.cli.npe:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["npe*"]
